--- a/_config.yml
+++ b/_config.yml
@@ -61,8 +61,8 @@ footer-link-col: "#404040"
 
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
-author: KRT
-  name: Kartik Talamadupula
+author: 
+  name: KRT
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
