--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: Reasoning for Complex QA Workshop at AAAI 2020
 
 # List of links in the navigation bar
 navbar-links:
-  Call for Papers: "/cfp.md"
+  Call for Papers: "/cfp"
   Submission Site: ""
   Previous Editions:
       - RCQA 19: "http://ibm.biz/rcqa-aaai19"
