--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,10 @@ description: Reasoning for Complex QA Workshop at AAAI 2020
 
 # List of links in the navigation bar
 navbar-links:
+  Accepted Papers: "/schedule"
+  Schedule: "/schedule"
   Organization: "/pc"
-  Submission Site: "https://easychair.org/conferences/?conf=rcqa20"
+  # Submission Site: "https://easychair.org/conferences/?conf=rcqa20"
   Previous Editions:
       - RCQA 19: "http://ibm.biz/rcqa-aaai19"
   # About Me: "aboutme"
