--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,13 @@ description: Reasoning for Complex QA Workshop at AAAI 2020
 # List of links in the navigation bar
 navbar-links:
   Home: "/index"
-  Accepted Papers: "/schedule"
-  Schedule: "/schedule"
-  Organization: "/pc"
+  Schedule: 
+      - Program: "/schedule"
+      - Acceped Papers: "/schedule"
+  # Schedule: "/schedule"
+  PC: "/pc"
   # Submission Site: "https://easychair.org/conferences/?conf=rcqa20"
-  Previous Editions:
+  Past:
       - RCQA 19: "http://ibm.biz/rcqa-aaai19"
   # About Me: "aboutme"
   # Resources:
