KRT: Updated speakers yml

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -16,7 +16,7 @@ nasrin:
   bio: "TBA"
 dan:
   name: "Dan Roth"
-  url: https://www.cis.upenn.edu/~danroth/
+  url: "https://www.cis.upenn.edu/~danroth/"
   affiliation: "UPenn"
   img: "dan.jpg"
   title: "TBA"
