KRT: Changed Rachel affiliation order to match website

--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -24,7 +24,7 @@ jay:
 rachel:
   name: "Rachel Rudinger"
   url: "https://rudinger.github.io/"
-  affiliation: "AI2 / Univ of Maryland"
+  affiliation: "Univ of Maryland / AI2"
   img: "rachel.jpg"
 mausam:
   name: "Mausam"
