KRT: Open poster session info

--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -33,7 +33,7 @@ mausam:
   img: "mausam.jpg"
 nanyun: 
   name: "Nanyun Peng"
-  url: "https://www.cs.jhu.edu/~npeng/"
+  url: "http://vnpeng.net/"
   affiliation: "ISI / USC"
   img: "nanyun.jpg"
 pavan:
