KRT: Modifying speaker page layout

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -3,6 +3,7 @@ ray:
   url: "https://www.cs.utexas.edu/~mooney/"
   affiliation: "UT Austin"
   img: "ray.jpg"
+  time: "0900-0930"
   title: "Integrating Logical and Vector Representations and Using Plan-Based Understanding for Complex QA" 
   abstract: "Both logical and vector representations of natural language semantics have strengths and weaknesses.  Integrating both representations can improve reasoning for complex QA. We will review our previous work on using Markov Logic for such integration and discuss more recent neuro-symbolic approaches.  Plan-based narrative understanding, on the other hand, is an approach introduced in the 1970's that tried to produce “causal explanations” of characters actions in a story in terms of their plans and goals, allowing comprehension of narrative text that effectively supports answering “why” questions.  We will review early work on this approach and its use in Explanation Based Learning, and discuss our on-going work on using deep-learning to modernize plan-based understanding and make it more robust."
   bio: "Raymond J. Mooney is a Professor in the Department of Computer Science at the University of Texas at Austin. He received his Ph.D. in 1988 from the University of Illinois at Urbana/Champaign. He is an author of over 170 published research papers, primarily in the areas of machine learning and natural language processing. He was the President of the International Machine Learning Society from 2008-2011, program co-chair for AAAI 2006, general chair for EMNLP 2005, and co-chair for ICML 1990. He is a Fellow of AAAI, ACM, and ACL and the recipient of the Classic Paper award from AAAI-19 and best paper awards from AAAI-96, KDD-04, ICML-05 and ACL-07."
@@ -11,6 +12,7 @@ nasrin:
   url: "https://www.cs.rochester.edu/~nasrinm/"
   affiliation: "Elemental Cognition"
   img: "nasrin.jpg"
+  time: "1110-1140"
   title: "TBA"
   abstract: "TBA"
   bio: "TBA"
@@ -19,6 +21,7 @@ dan:
   url: "https://www.cis.upenn.edu/~danroth/"
   affiliation: "UPenn"
   img: "dan.jpg"
+  time: "1620-1650"
   title: "TBA"
   abstract: "TBA"
   bio: "TBA"
@@ -27,6 +30,7 @@ sameer:
   url: "http://sameersingh.github.io/"
   affiliation: "UC Irvine"
   img: "sameer.jpg"
+  time: "1430-1500"
   title: "Evaluating and Testing Question Answering Capabilities"
   abstract: "Current evaluation of question answering primarily consists of measuring the accuracy of identifying the answer of a question from a set of choices (explicitly multi-choice or all possible spans) on held-out QA pairs. Since the held-out pairs are often gathered using similar annotation process as the training data, they include the same biases that act as shortcuts for reasoning, allowing machine learning models to achieve accurate results, without requiring actual comprehension. Thus accuracy is a poor proxy for generalization for reading comprehension tasks.
 
@@ -37,6 +41,7 @@ robyn:
   url: "https://twitter.com/r_speer"
   affiliation: "Luminoso"
   img: "robyn.jpg"
+  time: "1400-1430"
   title: "ConceptNet in Context"
   abstract: "ConceptNet is a knowledge graph that aims to represent the basic things about word meanings that people know and computers inherently don’t. The ways in which it is used have changed a lot over its 20-year history. In our present context of powerful neural language models that are used for question answering, text generation, story understanding, and many other tasks, we can still see mistakes that would be improved by computational common sense, and sometimes the knowledge in ConceptNet can help. I’ll discuss how ConceptNet is integrated with various recent machine learning systems, how this relationship is evolving, and some best practices for using it."
   bio: "Robyn Speer is Chief Scientist at Luminoso and lead maintainer of ConceptNet."
@@ -45,6 +50,7 @@ bishan:
   url: "http://www.cs.cmu.edu/~bishan/"
   affiliation: "LAER AI"
   img: "bishan.jpg"
+  time: "1200-1230"
   title: "Knowledge-aware Machine Reading for Question Answering" 
   abstract: "Recent years have seen a lot of progress in the development of machine reading systems for question answering. In order to correctly answer questions, a system needs to not only understand the question, but also gather relevant information, and synthesize it to produce a coherent answer. In practice, the information that is required for answering questions is often not provided to the system in a well-organized form. Instead, it can be embedded in disparate sources, such as the web, books, domain expertise, and personal experience. How to effectively distill knowledge from these sources and use it for question answering? In this talk, I will discuss machine reading models that are capable of leveraging internal/external knowledge for question answering and describe the remaining challenges of these models for real-world question answering problems."
   bio: "Bishan Yang’s interests are in building machine learning algorithms that can extract, organize, and analyze actionable information from large volumes of data. Most recently she was a Postdoc at Carnegie Mellon Machine Learning department working with Tom Mitchell on problems of machine reading and knowledge base construction. Prior to that she obtained her PhD from Cornell University where she was advised by Claire Cardie. In June 2018, together with Igor Labutov, she co-founded LAER AI., a startup based in New York City, focusing on developing next-generation semantic search technologies for enterprises."
