--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@ description: Reasoning for Complex QA Workshop at AAAI 2020
 # List of links in the navigation bar
 navbar-links:
   Home: "/index"
-  Open Session: "/schedule#open-poster-session"
+  Invited Talks: "/speakers"
   Program: "/program"
   Schedule: 
       - Program: "/program"
-      - Invited Talks: "/speakers"
+      - Open Session: "/schedule#open-poster-session"
       - Accepted Papers: "/schedule#accepted-papers"
   # Schedule: "/schedule"
   PC: "/pc"
