--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,11 @@ navbar-links:
   Home: "/index"
   Invited Talks: "/speakers"
   Program: "/program"
-  Schedule: 
-      - Program: "/program"
-      - Open Session: "/schedule#open-poster-session"
-      - Accepted Papers: "/schedule#accepted-papers"
+  Accepted Papers: "/schedule#accepted-papers"
+  # Schedule: 
+  #     - Program: "/program"
+  #     - Open Session: "/schedule#open-poster-session"
+  #     - Accepted Papers: "/schedule#accepted-papers"
   # Schedule: "/schedule"
   PC: "/pc"
   # Submission Site: "https://easychair.org/conferences/?conf=rcqa20"
