KRT: Added slides to speaker page

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -3,6 +3,7 @@ ray:
   shortname: "ray"
   url: "https://www.cs.utexas.edu/~mooney/"
   affiliation: "UT Austin"
+  slides: "https://rcqa-ws.github.io/slides/ray.pptx"
   img: "ray.jpg"
   time: "0900-0930"
   title: "Integrating Logical and Vector Representations and Using Plan-Based Understanding for Complex QA" 
@@ -13,6 +14,7 @@ nasrin:
   shortname: "nasrin"
   url: "https://www.cs.rochester.edu/~nasrinm/"
   affiliation: "Elemental Cognition"
+  slides: ""
   img: "nasrin.jpg"
   time: "1110-1140"
   title: "Towards AI systems that can build coherent causal models of what they read!"
@@ -23,6 +25,7 @@ dan:
   shortname: "dan"
   url: "https://www.cis.upenn.edu/~danroth/"
   affiliation: "UPenn"
+  slides: "https://rcqa-ws.github.io/slides/dan.pptx"
   img: "dan.jpg"
   time: "1620-1650"
   title: "Why (and how) should we study Question Answering?"
@@ -38,6 +41,7 @@ sameer:
   shortname: "sameer"
   url: "http://sameersingh.github.io/"
   affiliation: "UC Irvine"
+  slides: ""
   img: "sameer.jpg"
   time: "1430-1500"
   title: "Evaluating and Testing Question Answering Capabilities"
@@ -50,6 +54,7 @@ robyn:
   shortname: "robyn"
   url: "https://twitter.com/r_speer"
   affiliation: "Luminoso"
+  slides: "https://rcqa-ws.github.io/slides/robyn.pdf"
   img: "robyn.jpg"
   time: "1400-1430"
   title: "ConceptNet in Context"
@@ -60,6 +65,7 @@ bishan:
   shortname: "bishan"
   url: "http://www.cs.cmu.edu/~bishan/"
   affiliation: "LAER AI"
+  slides: "https://rcqa-ws.github.io/slides/bishan.pptx"
   img: "bishan.jpg"
   time: "1200-1230"
   title: "Knowledge-aware Machine Reading for Question Answering" 
